--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
 spring.application.name=docuMind99
+
+# ===============================
+# PostgreSQL Configuration
+# ===============================
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb?options=-c%20TimeZone=UTC
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional but recommended
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+# ===============================
+# MinIO Configuration
+# ===============================
+
+minio.url=http://localhost:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.bucket=my-bucket
+
+# ===============================
+# File Upload Configuration
+# ===============================
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
